syntax = "proto3";
package msg;

import public "google/protobuf/timestamp.proto";

message Msg {
    enum MsgType {
        P2P = 0; // 单聊
        P2G = 1; // 群聊
    }

    enum ContentType {
        WITHDRAW = 0; // 撤回
        TEXT     = 1; // 文字（包括内置表情包）
        IMAGE    = 2; // 图片
        FILE     = 3; // 文件
        AUDIO    = 4; // 语音
        VIDEO    = 5; // 视频
    }

    required string msgId                       = 1;
    required MsgType msgType                    = 2;
    required ContentType contentType            = 3;

    required string sender                      = 4;
    required string receiver                    = 5;
    required google.protobuf.Timestamp createAt = 6;
    required bytes content                      = 7;
}